# RAG_Effectiveness

./: RAG (1).ipynb  RAG.ipynb  RAG_.ipynb  RAG_effectiveness.ipynb  README.md  answers.csv  answers_gemma2-9b-it_100.csv  answers_llama-3.1-8b-instant_100.csv  answers_llama.csv  answers_llama_test.csv  answers_qwen.csv  answers_qwen_test.csv  experiment_results.jsonl  pyproject.toml  rag-implementation.ipynb
database/ab85fcef-989e-4912-85f1-14e063ea3754/: index_metadata.pickle
