[tool.poetry]
name = "rag-effectiveness"
version = "3.11"
description = ""
authors = ["JoudiAlakkad <joudi.alakkad@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
evaluate = "^0.4.3"
chromadb = "^0.6.2"
torch = "^2.5.1"
bert-score = "^0.3.13"
nltk = "^3.9.1"
absl-py = "^2.1.0"
rouge-score = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
